force-app/main/default/objects/CoffeeProduct__c/CoffeeProduct__c.object-meta.xml
<CustomObject>
    <label>Coffee Product</label>
    <pluralLabel>Coffee Products</pluralLabel>
    <nameField>
        <label>SKU</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>