force-app/main/default/objects/CoffeeProduct__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Ethiopia</fullName><default>false</default><label>Ethiopia</label></value>
            <value><fullName>Colombia</fullName><default>false</default><label>Colombia</label></value>
            <value><fullName>Kenya</fullName><default>false</default><label>Kenya</label></value>
            <value><fullName>Guatemala</fullName><default>false</default><label>Guatemala</label></value>
            <value><fullName>Brazil</fullName><default>false</default><label>Brazil</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>