force-app/main/default/objects/CoffeeProduct__c/fields/RetailPrice__c.field-meta.xml
<CustomField>
    <fullName>RetailPrice__c</fullName>
    <label>Retail Price (EUR)</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>