force-app/main/default/objects/CoffeeProduct__c/fields/RoastLevel__c.field-meta.xml
<CustomField>
    <fullName>RoastLevel__c</fullName>
    <label>Roast Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Light</fullName><default>false</default><label>Light</label></value>
            <value><fullName>Medium</fullName><default>true</default><label>Medium</label></value>
            <value><fullName>Dark</fullName><default>false</default><label>Dark</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>