force-app/main/default/objects/CoffeeProduct__c/fields/WholesaleCost__c.field-meta.xml
<CustomField>
    <fullName>WholesaleCost__c</fullName>
    <label>Wholesale Cost (EUR)</label>
    <description>Internal cost. Restricted from support agents via FLS.</description>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>