force-app/main/default/objects/CoffeeProduct__c/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>NAME</columns>
    <columns>RetailPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>